[package]
name = "rasta"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
image = "0.24.2"

[profile.release]
debug = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sdl2 = "0.35.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.58" }
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-bindgen = { version = "0.2.81" }
web-sys = { version = "0.3.58", features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData'
]}
